# mpi_helloworld

./: CMakeLists.txt  extra_task1_openmp  extra_task1_openmp.cpp  extra_task2_openmp  extra_task2_openmp.cpp  gfg  main  main.cpp  task1_hello_world_openmp  task1_hello_world_openmp.cpp  task2_1nsum_openmp  task2_1nsum_openmp.cpp  task3_common_var_openmp  task3_common_var_openmp.cpp  tests  tests.cpp
lock_free_queue/: lock_free  main.cpp
matrix_multiplication/: CMakeLists.txt  main.cpp  test  test.cpp
matrix_multiplication/matplotplusplus-1.1.0-Linux/lib/cmake/Matplot++/: Matplot++Targets-release.cmake  Matplot++Targets.cmake
pthreads_sort/parallels1/: CMakeLists.txt  main.c  parallels1
pthreads_sort/parallels2/: CMakeLists.txt  main.c  parallels2
